Correcting Info on Portal Page

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-	<h1>Links</h1>
-	<p>date</p>
+	<h1>Brandan Bath's WSP Assignments</h1>
+	<p>April 8th, 2013</p>
 	
 	<ul>
-		<li><a href="http://...">list</a></li>
+		<li><a href="http://...">Analysis</a></li>
 	</ul>
 </body>
 </html>
