Edit to Analysis Page

--- a/Analysis.html
+++ b/Analysis.html
@@ -6,14 +6,13 @@
 <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<h1 class="title">Signs by Design</h1>
+	<h1 class="title">Signs by Design Discovery</h1>
 	<p class="credits">Re-Design By Brandan Bath</p>
 	<h5>Client: Signs By Design</h5>
 	<h5>Project: Website Re-Design</h5>
 	<h5>Designer: Brandan Bath</h5>
 	<h5>Document: Project Analysis</h5>
-	
-	<h2>Discovery<h2>
+
 	<h3>Site Intent</h3>
 		<p class="answers">The overall intent for the company "Signs by Design" is to 
 		showcase their work, which is clearly a big deal in the signage industry, because 
