Moved Analysis to Activities folder

--- a/activities/Analysis.html
+++ b/activities/Analysis.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>Brandan Bath's Project Analysis</title>
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 	<h1 class="title">Signs by Design Discovery</h1>
@@ -105,5 +105,19 @@
 			to take their business to the next level are the real winners, because 
 			then through the life of their business, they will continue to return
 			to you, knowing you deliver quality work.</p>
+			
+			<h5>Cases/Personas<h5>
+				<p>The person that would be using and interacting with this site will vary 
+				from medium to a higher income, as they do have extra cash within their 
+				business to spend on the signage for advertising purposes.
+				
+				All this person would really want when they visit the website is to find 
+				the info that they came to look for, and not have to dig deep into the 
+				site, but have it accessible and easy to get to. From here they would 
+				want to request a quote, so they would go to the contact page. This is 
+				why I would recommend the 4 main pages, Home, About, Portfolio, and Contact. 
+				This makes it short simple and doesn't frustrate the viewer. Which increases 
+				the chances of them recommending you to one of their friends who may have 
+				a business that is in need of signage.</p>
 </body>
 </html>
