Added websites to competitive names

--- a/activities/Analysis.html
+++ b/activities/Analysis.html
@@ -52,18 +52,18 @@
 			to jump from page to page.</p>
 			
 		<h3>Competitive Analysis</h3>
-			<h5>St. Clair Signs</h5>
+			<h5>St. Clair Signs - www.stclairsigns.com</h5>
 			<p class="answers">This website "St. Clair Signs" has no data available online regarding
 			their statistics, but by the looks of their actual business, they seem to 
 			spend a little more time structuring their business offline, than online.</P>
 			
-			<h5>Eastern Signs</h5>
+			<h5>Eastern Signs - www.easternsigns.com</h5>
 			<p class="answers">This website for "Eastern Signs" is ranked at 8,543,363 so there 
 			is no historical data. As you have to be ranked 100,000 or above to 
 			be able to retrieve that data. Although they do at least have a half 
 			decent website.</P>
 			
-			<h5>Talley Sign Company</h5>
+			<h5>Talley Sign Company - www.talleysign.com</h5>
 			<p class="answers">This website for "Talley Sign Company" again has no data due to it's 
 			rankings, although their design has to be the best of which I've seen 
 			throughout the duration of my search.
