Edited Analysis Link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<p>April 8th, 2013</p>
 	
 	<ul>
-		<li><a href="http://brandanbath.github.io/WSPsite/Analysis.html">Analysis</a></li>
+		<li><a href="http://brandanbath.github.io/WSPsite/activities/Analysis.html">Analysis</a></li>
 	</ul>
 </body>
 </html>
