--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<ul>
 		<li><a href="http://brandanbath.github.io/WSPsite/activities/Analysis.html">Analysis</a></li>
 		<li><a href="http://brandanbath.github.io/WSPsite/bath_brandan-content_audit.pdf">Content Audit</a></li>
-		<li><a href="http://brandanbath.github.io/WSPsite/bath_brandan-content_audit.pdf">Style Tiles</a></li>
+		<li><a href="http://brandanbath.github.io/WSPsite/activities/bath_brandan-style_tiles.html">Style Tiles</a></li>
 	</ul>
 </body>
 </html>
