Coded html for 6 pages - Signs By Design Revamp

--- a/Signs By Design/Pages/maintenance.html
+++ b/Signs By Design/Pages/maintenance.html
@@ -26,31 +26,24 @@
 		</nav>
 		<!-- navigation -->
 		
-		<h2>Services</h2>
+		<h2>Maintenance</h2>
 		<hr>
 		
+		<h4>Installation Services</h4>
 		<ul>
-			<li><a href="signs.html">Illuminated Signs</a></li>
-			<li><a href="signs.html">Non Illuminated Signs</a></li>
-			<li><a href="signs.html">Vehicle Wraps</a></li>
-			<li><a href="maintenance.html">Installation Services</a></li>
+			<li>Install</li>
+			<li>Service/Repair</li>
+			<li>Refurbish</li>
+			<li>Survey/Permit</li>
+			<li>Lighting</li>
 		</ul>
 		
 		<div>
-		<img src="../images/channelLetter8.jpg" alt="../images/channelLetter8.jpg" width="150px">
-		<p>Oriental House</p>
-		
-		<img src="../images/vehicle4.jpg" alt="../images/vehicle4.jpg" width="150px">
-		<p>Mustang</p>
-		
-		<img src="../images/dimensional9.jpg" alt="../images/dimensional9.jpg" width="150px">
-		<p>Millers Pond</p>
-		
-		<img src="../images/vehicle8.jpg" alt="../images/vehicle8.jpg" width="150px">
-		<p>Total Comfort</p>
- 		
- 		<img src="../images/delivery3.jpg" alt="../images/delivery3.jpg" width="150px">
-		<p>Peking</p>
+		<img src="../images/raceway.jpg" alt="../images/raceway.jpg" width="150px">
+		<img src="../images/channelLetter.jpg" alt="../images/channelLetter.jpg" width="150px">
+		<img src="../images/flex.jpg" alt="../images/flex.jpg" width="150px">
+		<img src="../images/cabinet.jpg" alt="../images/cabinet.jpg" width="150px">
+		</div>
 		
 		<footer>
 			<h4>Location:</h4>
