--- a/Signs By Design/Pages/signs.html
+++ b/Signs By Design/Pages/signs.html
@@ -28,6 +28,11 @@
 		
 		<h2>Signs</h2>
 		<hr>
+			<ul>
+				<li><a href="services.html">Services</a></li>
+				<li><a href="signs.html">Signs</a></li>
+			</ul>
+		<hr>
 		
 		<h4>Illuminated Signs</h4>
 		<ul>
