--- a/Signs By Design/Pages/maintenance.html
+++ b/Signs By Design/Pages/maintenance.html
@@ -28,6 +28,11 @@
 		
 		<h2>Maintenance</h2>
 		<hr>
+			<ul>
+				<li><a href="services.html">Services</a></li>
+				<li><a href="maintenance.html">Maintenance</a></li>
+			</ul>
+		<hr>
 		
 		<h4>Installation Services</h4>
 		<ul>
