--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<li><a href="http://brandanbath.github.io/WSPsite/activities/Analysis.html">Analysis</a></li>
 		<li><a href="http://brandanbath.github.io/WSPsite/bath_brandan-content_audit.pdf">Content Audit</a></li>
 		<li><a href="http://brandanbath.github.io/WSPsite/activities/bath_brandan-style_tiles.html">Style Tiles</a></li>
+		<li><a href="http://brandanbath.github.io/WSPsite/activities/bath_brandan-prototype.html">Prototype</a></li>
 	</ul>
 </body>
 </html>
