--- a/Signs By Design/Pages/index.html
+++ b/Signs By Design/Pages/index.html
@@ -4,42 +4,43 @@
 <meta charset="utf-8" />
 <title>Welcome to Signs By Design</title>
 <link rel="stylesheet" href="../css/main.css">
+<link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 </head>
 	<body>
+		<!-- phone number -->
+        <div id="number">
+        <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146px">
+        <!-- phone number -->
+	
+		<!-- branding -->
  		<div id="branding">
-        <!-- branding -->
         <img src="../images/SignsByDesign Logo.png" alt="../images/SignsByDesign Logo.png" width="250px">
         <!-- branding -->
-        
-        <!-- phone number -->
-        <h3>864-322-7073</h3>
-        <!-- phone number -->
   		
   		<!-- navigation -->
   		<nav>
-    		<ul>
-    			<li><a href="index.html">HOME</a></li>
-    			<li><a href="about.html">ABOUT</a></li>
-    			<li><a href="services.html">SERVICES</a></li>
-    			<li><a href="contact.html">CONTACT</a></li>
-    		</ul>
-		</nav>
+    		<a href="index.html"><img src="../images/Home.png"></a>
+    		<a href="about.html"><img src="../images/About.png"></a>
+    		<a href="services.html"><img src="../images/Services.png"></a>
+    		<a href="contact.html"><img src="../images/Contact.png"></a>
+    	</nav>
 		<!-- navigation -->
 		
 		<div>
-		<img src="../images/vehicle.jpg" alt="../images/vehicle.jpg">
+		<img id="featuredphoto" src="../images/vehicle.jpg" alt="../images/vehicle.jpg">
  
- 		<h2>Welcome to Signs By Design!</h2>
-		<article>
+ 		<article id="hometext">
+ 		<h1>Welcome to Signs By Design!</h1>
 		<p>Thank you for visiting our site. We design, manufacture, install, repair, maintain and 
 		refurbish all types of signage. We welcome both local customers and national accounts.
 
 		This website demonstrates a wide variety of custom signs. If you need assistance with 
 		what types of materials or sign will work best for you, please feel free to email or 
 		call, and we'll work with you to create a custom sign for your business...</p>
-		</article>
-		
 		<a href="services.html">View Services</a>
+		</article>
+		<img src="../images/Divider Lines.png" alt="../images/Divider Lines.png">
 		
 		<footer>
 			<h4>Location:</h4>
