--- a/Signs By Design/Pages/maintenance.html
+++ b/Signs By Design/Pages/maintenance.html
@@ -12,18 +12,16 @@
         <!-- Branding -->
         
         <!-- phone number -->
-        <h3>864-322-7073</h3>
+        <h3 class="number">864-322-7073</h3>
         <!-- phone number -->
   		
   		<!-- navigation -->
   		<nav>
-    		<ul>
-    			<li><a href="index.html">HOME</a></li>
-    			<li><a href="about.html">ABOUT</a></li>
-    			<li><a href="services.html">SERVICES</a></li>
-    			<li><a href="contact.html">CONTACT</a></li>
-    		</ul>
-		</nav>
+    		<a href="index.html">HOME</a>
+    		<a href="about.html">ABOUT</a>
+    		<a href="services.html">SERVICES</a>
+    		<a href="contact.html">CONTACT</a>
+    	</nav>
 		<!-- navigation -->
 		
 		<h2>Maintenance</h2>
