Signs By Design CSS

--- a/Signs By Design/Pages/contact.html
+++ b/Signs By Design/Pages/contact.html
@@ -6,27 +6,29 @@
 <link rel="stylesheet" href="../css/main.css">
 </head>
 	<body>
+ 		<!-- phone number -->
+        <div id="number">
+        <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146px">
+        <!-- phone number -->
+	
+		<!-- branding -->
  		<div id="branding">
-        <!-- Branding -->
-        <img src="../images/SignsByDesign Logo.png" alt="../images/SignsByDesign Logo.png" width="250px">
-        <!-- Branding -->
-        
-        <!-- phone number -->
-        <h3 class="number">864-322-7073</h3>
-        <!-- phone number -->
+        <img src="../images/SignsByDesign Orange Logo.png" alt="../images/SignsByDesign Orange Logo.png" width="250px">
+        <!-- branding -->
   		
   		<!-- navigation -->
   		<nav>
-    		<a href="index.html">HOME</a>
-    		<a href="about.html">ABOUT</a>
-    		<a href="services.html">SERVICES</a>
-    		<a href="contact.html">CONTACT</a>
+    		<a href="index.html"><img src="../images/Home.png"></a>
+    		<a href="about.html"><img src="../images/About.png"></a>
+    		<a href="services.html"><img src="../images/Services.png"></a>
+    		<a href="contact.html"><img src="../images/ContactRoll.png"></a>
     	</nav>
 		<!-- navigation -->
 		
-		<h2>Contact</h2>
+		<h1 class="pagetitle">Contact</h1>
 		<hr>
 		
+		<section id="contactform">
 		<form method="get" action="mailto:info4sign@gmail.com">
 			<div>
 				<label for="name_first">First Name</label>
@@ -71,6 +73,7 @@
 			 <div>
 				<button type="submit" name="submit" class="button" />Send</button>
 			</div>
+			</section>
 			
 			<aside>
 				<h4>Contact:</h4>
@@ -85,7 +88,7 @@
 	
 		
 		
-		<footer>
+		<footer id="contactcredits">
 			<p>Copyright © Signs By Design. Designed By Brandan Bath</p>
 		</footer>
 
