updated index linking

--- a/signs-by-design/Pages/signs.html
+++ b/signs-by-design/Pages/signs.html
@@ -18,7 +18,7 @@
   		
   		<!-- navigation -->
   		<nav>
-    		<a href="index.html"><img src="../images/Home.png"></a>
+    		<a href="../index.html"><img src="../images/Home.png"></a>
     		<a href="about.html"><img src="../images/About.png"></a>
     		<a href="services.html"><img src="../images/Services.png"></a>
     		<a href="contact.html"><img src="../images/Contact.png"></a>
