--- a/signs-by-design/index.html
+++ b/signs-by-design/index.html
@@ -21,9 +21,9 @@
   		<!-- navigation -->
   		<nav>
     		<a href="index.html"><img src="images/Home.png"></a>
-    		<a href="about.html"><img src="images/About.png"></a>
-    		<a href="services.html"><img src="images/Services.png"></a>
-    		<a href="contact.html"><img src="images/Contact.png"></a>
+    		<a href="Pages/about.html"><img src="images/About.png"></a>
+    		<a href="Pages/services.html"><img src="images/Services.png"></a>
+    		<a href="Pages/contact.html"><img src="images/Contact.png"></a>
     	</nav>
 		<!-- navigation -->
 		
@@ -54,8 +54,8 @@
 			<section class="contact">
 			<h4>Contact:</h4>
 				<p>
-					Ph: 864-322-7073
-					Fax: 864-322-7307
+					Ph: 864-322-7073<br />
+					Fax: 864-322-7307<br />
 					E: info4sign@gmail.com
 				</p>
 			</section>
