Edited html validation errors

--- a/signs-by-design/Pages/about.html
+++ b/signs-by-design/Pages/about.html
@@ -9,19 +9,21 @@
  		<!-- phone number -->
         <div id="number">
         <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146px">
+        </div>
         <!-- phone number -->
 	
 		<!-- branding -->
  		<div id="branding">
-        <img src="../images/SignsByDesign Orange Logo.png" alt="../images/SignsByDesign Orange Logo.png" width="250px">
+        <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250px">
+        </div>
         <!-- branding -->
   		
   		<!-- navigation -->
   		<nav>
-    		<a href="../index.html"><img src="../images/Home.png"></a>
-    		<a href="about.html"><img src="../images/AboutRoll.png"></a>
-    		<a href="services.html"><img src="../images/Services.png"></a>
-    		<a href="contact.html"><img src="../images/Contact.png"></a>
+    		<a href="../index.html"><img src="../images/Home.png" alt="../images/Home.png"></a>
+    		<a href="about.html"><img src="../images/AboutRoll.png" alt="../images/AboutRoll.png"></a>
+    		<a href="services.html"><img src="../images/Services.png" alt="../images/Services.png"></a>
+    		<a href="contact.html"><img src="../images/Contact.png" alt="../images/Contact.png"></a>
     	</nav>
 		<!-- navigation -->
 		
@@ -30,6 +32,7 @@
 		
 		<div>
 		<img id="element" src="../images/ElementWindow.jpg" alt="../images/ElementWindow.jpg">
+		</div>
  
 		<article>
 		<p>Thank you for visiting our site. We design, manufacture, install, repair, 
@@ -43,8 +46,8 @@
 		depends on your satisfaction. </p>
 		</article>
 		<section id="aboutdivider">
-		<img src="../images/Divider Lines.png" alt="../images/Divider Lines.png">
-		<img src="../images/Divider Lines.png" alt="../images/Divider Lines.png">
+		<img src="../images/DividerLines.png" alt="../images/DividerLines.png">
+		<img src="../images/DividerLines.png" alt="../images/DividerLines.png">
 		</section>
 		
 		<h1 id="subheadings">Customer Reviews</h1>
@@ -100,13 +103,8 @@
 			<section class="latestwork">
 			<h4>Latest Work:</h4>
 				<img src="../images/MonumentSandblast.jpg" alt="../images/MonumentSandblast.jpg" width="150">
-			</a>
 			</section>
 				
 			<p class="credits">Copyright © Signs By Design. Designed By Brandan Bath</p>
 		</footer>
-
-
-		</div>
-	</body>
-</head>
+</body>
