--- a/signs-by-design/Pages/contact.html
+++ b/signs-by-design/Pages/contact.html
@@ -9,19 +9,21 @@
  		<!-- phone number -->
         <div id="number">
         <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146px">
+        </div>
         <!-- phone number -->
 	
 		<!-- branding -->
  		<div id="branding">
-        <img src="../images/SignsByDesign Orange Logo.png" alt="../images/SignsByDesign Orange Logo.png" width="250px">
+        <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250px">
+        </div>
         <!-- branding -->
   		
   		<!-- navigation -->
   		<nav>
-    		<a href="../index.html"><img src="../images/Home.png"></a>
-    		<a href="about.html"><img src="../images/About.png"></a>
-    		<a href="services.html"><img src="../images/Services.png"></a>
-    		<a href="contact.html"><img src="../images/ContactRoll.png"></a>
+    		<a href="../index.html"><img src="../images/Home.png" alt="../images/Home.png"></a>
+    		<a href="about.html"><img src="../images/AboutRoll.png" alt="../images/AboutRoll.png"></a>
+    		<a href="services.html"><img src="../images/Services.png" alt="../images/Services.png"></a>
+    		<a href="contact.html"><img src="../images/Contact.png" alt="../images/Contact.png"></a>
     	</nav>
 		<!-- navigation -->
 		
@@ -51,7 +53,7 @@
 			</div>
 			
 			<div>
-				<label for="reason for contact">Service of Interest</label>
+				<label for="ReasonForContact">Service of Interest</label>
 			</div>
 			
 			<div>
@@ -91,7 +93,4 @@
 		<footer id="contactcredits">
 			<p>Copyright © Signs By Design. Designed By Brandan Bath</p>
 		</footer>
-
-		</div>
-	</body>
-</head>
+</body>
