--- a/signs-by-design/index.html
+++ b/signs-by-design/index.html
@@ -11,24 +11,27 @@
 		<!-- phone number -->
         <div id="number">
         <img src="images/SBD_Number.png" alt="images/SBD_Number.png" width="146px">
+        </div>
         <!-- phone number -->
 	
 		<!-- branding -->
  		<div id="branding">
-        <img src="images/SignsByDesign Orange Logo.png" alt="images/SignsByDesign Orange Logo.png" width="250px">
+        <img src="images/SignsByDesignOrangeLogo.png" alt="images/SignsByDesignOrangeLogo.png" width="250px">
+        </div>
         <!-- branding -->
   		
   		<!-- navigation -->
   		<nav>
-    		<a href="index.html"><img src="images/Home.png"></a>
-    		<a href="Pages/about.html"><img src="images/About.png"></a>
-    		<a href="Pages/services.html"><img src="images/Services.png"></a>
-    		<a href="Pages/contact.html"><img src="images/Contact.png"></a>
+    		<a href="index.html"><img src="images/Home.png" alt="images/Home.png"></a>
+    		<a href="Pages/about.html"><img src="images/About.png" alt="images/About.png"></a>
+    		<a href="Pages/services.html"><img src="images/Services.png" alt="images/Services.png"></a>
+    		<a href="Pages/contact.html"><img src="images/Contact.png" alt="images/Contact.png"></a>
     	</nav>
 		<!-- navigation -->
 		
 		<div>
 		<img id="featuredphoto" src="images/vehicle2.png" alt="images/vehicle2.png">
+		</div>
  
  		<article id="hometext">
  		<h1>Welcome to Signs By Design!</h1>
@@ -38,11 +41,11 @@
 		This website demonstrates a wide variety of custom signs. If you need assistance with 
 		what types of materials or sign will work best for you, please feel free to email or 
 		call, and we'll work with you to create a custom sign for your business...</p>
-		<a id="servicesbutton" href="services.html"><img src="images/View Services.png" width="130px"></a>
+		<a id="servicesbutton" href="services.html"><img src="images/ViewServices.png" alt="images/ViewServices.png" width="130px"></a>
 		</article>
 		<section id="aboutdivider">
-		<img src="images/Divider Lines.png" alt="images/Divider Lines.png">
-		<img src="images/Divider Lines.png" alt="images/Divider Lines.png">
+		<img src="images/DividerLines.png" alt="images/DividerLines.png">
+		<img src="images/DividerLines.png" alt="images/DividerLines.png">
 		</section>
 		
 		<footer class="footer">
@@ -63,12 +66,8 @@
 			<section class="latestwork">
 			<h4>Latest Work:</h4>
 				<img src="images/MonumentSandblast.jpg" alt="images/MonumentSandblast.jpg" width="150">
-			</a>
 			</section>
 				
 			<p class="credits">Copyright © Signs By Design. Designed By Brandan Bath</p>
 		</footer>
-
-		</div>
-	</body>
-</head>
+</body>
