--- a/signs-by-design/Pages/signs.html
+++ b/signs-by-design/Pages/signs.html
@@ -9,19 +9,21 @@
  		<!-- phone number -->
         <div id="number">
         <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146px">
+        </div>
         <!-- phone number -->
 	
 		<!-- branding -->
  		<div id="branding">
-        <img src="../images/SignsByDesign Orange Logo.png" alt="../images/SignsByDesign Orange Logo.png" width="250px">
+        <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250px">
+        </div>
         <!-- branding -->
   		
   		<!-- navigation -->
   		<nav>
-    		<a href="../index.html"><img src="../images/Home.png"></a>
-    		<a href="about.html"><img src="../images/About.png"></a>
-    		<a href="services.html"><img src="../images/Services.png"></a>
-    		<a href="contact.html"><img src="../images/Contact.png"></a>
+    		<a href="../index.html"><img src="../images/Home.png" alt="../images/Home.png"></a>
+    		<a href="about.html"><img src="../images/AboutRoll.png" alt="../images/AboutRoll.png"></a>
+    		<a href="services.html"><img src="../images/Services.png" alt="../images/Services.png"></a>
+    		<a href="contact.html"><img src="../images/Contact.png" alt="../images/Contact.png"></a>
     	</nav>
 		<!-- navigation -->
 		
@@ -51,7 +53,7 @@
 		
 		<div>
 			<a class="signphotos"><img src="../images/delivery3.jpg" alt="../images/delivery3.jpg" width="150px"></a>
-			<a class="signphotos"><img src="../images/channelLetterNeon copy.jpg" alt="../images/channelLetterNeon copy.jpg" width="150px"></a>
+			<a class="signphotos"><img src="../images/channelLetterNeoncopy.jpg" alt="../images/channelLetterNeoncopy.jpg" width="150px"></a>
 			<a class="signphotos"><img src="../images/channelLetter6.jpg" alt="../images/channelLetter6.jpg" width="150px"></a>
 			<a class="signphotos"><img src="../images/neon3.jpg" alt="../images/neon3.jpg" width="150px"></a>
 		</div>
@@ -119,12 +121,8 @@
 			<section class="latestwork">
 			<h4>Latest Work:</h4>
 				<img src="../images/MonumentSandblast.jpg" alt="../images/MonumentSandblast.jpg" width="150">
-			</a>
 			</section>
 				
 			<p class="credits">Copyright © Signs By Design. Designed By Brandan Bath</p>
 		</footer>
-
-		</div>
-	</body>
-</head>
+</body>
