fixed validation errors

--- a/signs-by-design/Pages/about.html
+++ b/signs-by-design/Pages/about.html
@@ -8,13 +8,13 @@
 	<body>
  		<!-- phone number -->
         <div id="number">
-        <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146px">
+        <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146">
         </div>
         <!-- phone number -->
 	
 		<!-- branding -->
  		<div id="branding">
-        <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250px">
+        <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250">
         </div>
         <!-- branding -->
   		
