--- a/signs-by-design/Pages/contact.html
+++ b/signs-by-design/Pages/contact.html
@@ -8,22 +8,22 @@
 	<body>
  		<!-- phone number -->
         <div id="number">
-        <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146px">
+        <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146">
         </div>
         <!-- phone number -->
 	
 		<!-- branding -->
  		<div id="branding">
-        <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250px">
+        <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250">
         </div>
         <!-- branding -->
   		
   		<!-- navigation -->
   		<nav>
     		<a href="../index.html"><img src="../images/Home.png" alt="../images/Home.png"></a>
-    		<a href="about.html"><img src="../images/AboutRoll.png" alt="../images/AboutRoll.png"></a>
+    		<a href="about.html"><img src="../images/AboutRoll.png" alt="../images/About.png"></a>
     		<a href="services.html"><img src="../images/Services.png" alt="../images/Services.png"></a>
-    		<a href="contact.html"><img src="../images/Contact.png" alt="../images/Contact.png"></a>
+    		<a href="contact.html"><img src="../images/Contact.png" alt="../images/ContactRoll.png"></a>
     	</nav>
 		<!-- navigation -->
 		
@@ -31,7 +31,7 @@
 		<hr>
 		
 		<section id="contactform">
-		<form method="get" action="mailto:info4sign@gmail.com">
+		<form method="get" action="mailto:info4sign@gmail.com"></form>
 			<div>
 				<label for="name_first">First Name</label>
 				<input type="text" name="name_first" id="name_first" />
@@ -73,9 +73,8 @@
 			</div>
 		
 			 <div>
-				<button type="submit" name="submit" class="button" />Send</button>
+				<button type="submit" name="submit" class="button">Send</button>
 			</div>
-			</section>
 			
 			<aside>
 				<h4>Contact:</h4>
@@ -93,4 +92,4 @@
 		<footer id="contactcredits">
 			<p>Copyright © Signs By Design. Designed By Brandan Bath</p>
 		</footer>
-</body>
+	</body>
