--- a/signs-by-design/Pages/signs.html
+++ b/signs-by-design/Pages/signs.html
@@ -8,20 +8,20 @@
 	<body>
  		<!-- phone number -->
         <div id="number">
-        <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146px">
+        <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146">
         </div>
         <!-- phone number -->
 	
 		<!-- branding -->
  		<div id="branding">
-        <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250px">
+        <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250">
         </div>
         <!-- branding -->
   		
   		<!-- navigation -->
   		<nav>
     		<a href="../index.html"><img src="../images/Home.png" alt="../images/Home.png"></a>
-    		<a href="about.html"><img src="../images/AboutRoll.png" alt="../images/AboutRoll.png"></a>
+    		<a href="about.html"><img src="../images/AboutRoll.png" alt="../images/About.png"></a>
     		<a href="services.html"><img src="../images/Services.png" alt="../images/Services.png"></a>
     		<a href="contact.html"><img src="../images/Contact.png" alt="../images/Contact.png"></a>
     	</nav>
@@ -52,10 +52,10 @@
 		</div>
 		
 		<div>
-			<a class="signphotos"><img src="../images/delivery3.jpg" alt="../images/delivery3.jpg" width="150px"></a>
-			<a class="signphotos"><img src="../images/channelLetterNeoncopy.jpg" alt="../images/channelLetterNeoncopy.jpg" width="150px"></a>
-			<a class="signphotos"><img src="../images/channelLetter6.jpg" alt="../images/channelLetter6.jpg" width="150px"></a>
-			<a class="signphotos"><img src="../images/neon3.jpg" alt="../images/neon3.jpg" width="150px"></a>
+			<a class="signphotos"><img src="../images/delivery3.jpg" alt="../images/delivery3.jpg" width="150"></a>
+			<a class="signphotos"><img src="../images/channelLetterNeoncopy.jpg" alt="../images/channelLetterNeoncopy.jpg" width="150"></a>
+			<a class="signphotos"><img src="../images/channelLetter6.jpg" alt="../images/channelLetter6.jpg" width="150"></a>
+			<a class="signphotos"><img src="../images/neon3.jpg" alt="../images/neon3.jpg" width="150"></a>
 		</div>
 		
 		<h4>Non Illuminated Signs</h4>
@@ -82,10 +82,10 @@
 		</div>
 		
 		<div>
-			<a class="signphotos"><img src="../images/dimensional9.jpg" alt="../images/dimensional9.jpg" width="150px"></a>
-			<a class="signphotos"><img src="../images/sandblast9.jpg" alt="../images/sandblast9.jpg" width="150px"></a>
-			<a class="signphotos"><img src="../images/MonumentSandblast.jpg" alt="../images/MonumentSandblast.jpg" width="150px"></a>
-			<a class="signphotos"><img src="../images/realtor9.jpg" alt="../images/realtor9.jpg" width="150px"></a>
+			<a class="signphotos"><img src="../images/dimensional9.jpg" alt="../images/dimensional9.jpg" width="150"></a>
+			<a class="signphotos"><img src="../images/sandblast9.jpg" alt="../images/sandblast9.jpg" width="150"></a>
+			<a class="signphotos"><img src="../images/MonumentSandblast.jpg" alt="../images/MonumentSandblast.jpg" width="150"></a>
+			<a class="signphotos"><img src="../images/realtor9.jpg" alt="../images/realtor9.jpg" width="150"></a>
 		</div>
 		
 		<h4>Vehicle Graphics</h4>
@@ -96,10 +96,10 @@
 		</div>
 		
 		<div>
-			<a class="signphotos"><img src="../images/vehicle3.jpg" alt="../images/vehicle3.jpg" width="150px"></a>
-			<a class="signphotos"><img src="../images/vehicle4.jpg" alt="../images/vehicle4.jpg" width="150px"></a>
-			<a class="signphotos"><img src="../images/vehicle8.jpg" alt="../images/vehicle8.jpg" width="150px"></a>
-			<a class="signphotos"><img src="../images/vehicle10.jpg" alt="../images/vehicle10.jpg" width="150px"></a>
+			<a class="signphotos"><img src="../images/vehicle3.jpg" alt="../images/vehicle3.jpg" width="150"></a>
+			<a class="signphotos"><img src="../images/vehicle4.jpg" alt="../images/vehicle4.jpg" width="150"></a>
+			<a class="signphotos"><img src="../images/vehicle8.jpg" alt="../images/vehicle8.jpg" width="150"></a>
+			<a class="signphotos"><img src="../images/vehicle10.jpg" alt="../images/vehicle10.jpg" width="150"></a>
 		</div>
 		</section>
 		
