--- a/signs-by-design/Pages/maintenance.html
+++ b/signs-by-design/Pages/maintenance.html
@@ -8,20 +8,20 @@
 	<body>
  		<!-- phone number -->
         <div id="number">
-        <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146px">
+        <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146">
         </div>
         <!-- phone number -->
 	
 		<!-- branding -->
  		<div id="branding">
-        <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250px">
+        <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250">
         </div>
         <!-- branding -->
   		
   		<!-- navigation -->
   		<nav>
     		<a href="../index.html"><img src="../images/Home.png" alt="../images/Home.png"></a>
-    		<a href="about.html"><img src="../images/AboutRoll.png" alt="../images/AboutRoll.png"></a>
+    		<a href="about.html"><img src="../images/AboutRoll.png" alt="../images/About.png"></a>
     		<a href="services.html"><img src="../images/Services.png" alt="../images/Services.png"></a>
     		<a href="contact.html"><img src="../images/Contact.png" alt="../images/Contact.png"></a>
     	</nav>
@@ -52,10 +52,10 @@
 		</div>
 		
 		<div>
-			<a class="signphotos"><img src="../images/raceway.jpg" alt="../images/raceway.jpg" width="150px"></a>
-			<a class="signphotos"><img src="../images/channelLetter.jpg" alt="../images/channelLetter.jpg" width="150px"></a>
-			<a class="signphotos"><img src="../images/flex.jpg" alt="../images/flex.jpg" width="150px"></a>
-			<a class="signphotos"><img src="../images/cabinet.jpg" alt="../images/cabinet.jpg" width="150px"></a>
+			<a class="signphotos"><img src="../images/raceway.jpg" alt="../images/raceway.jpg" width="150"></a>
+			<a class="signphotos"><img src="../images/channelLetter.jpg" alt="../images/channelLetter.jpg" width="150"></a>
+			<a class="signphotos"><img src="../images/flex.jpg" alt="../images/flex.jpg" width="150"></a>
+			<a class="signphotos"><img src="../images/cabinet.jpg" alt="../images/cabinet.jpg" width="150"></a>
 		</div>
 		</section>
 		
