--- a/signs-by-design/Pages/services.html
+++ b/signs-by-design/Pages/services.html
@@ -8,21 +8,21 @@
 	<body>
  		<!-- phone number -->
         <div id="number">
-        <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146px">
+        <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146">
         </div>
         <!-- phone number -->
 	
 		<!-- branding -->
  		<div id="branding">
-        <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250px">
+        <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250">
         </div>
         <!-- branding -->
   		
   		<!-- navigation -->
   		<nav>
     		<a href="../index.html"><img src="../images/Home.png" alt="../images/Home.png"></a>
-    		<a href="about.html"><img src="../images/AboutRoll.png" alt="../images/AboutRoll.png"></a>
-    		<a href="services.html"><img src="../images/Services.png" alt="../images/Services.png"></a>
+    		<a href="about.html"><img src="../images/AboutRoll.png" alt="../images/About.png"></a>
+    		<a href="services.html"><img src="../images/Services.png" alt="../images/ServicesRoll.png"></a>
     		<a href="contact.html"><img src="../images/Contact.png" alt="../images/Contact.png"></a>
     	</nav>
 		<!-- navigation -->
@@ -42,27 +42,27 @@
 		
 		<section id="servicephotos">
 		<section class="photoline">
-		<img src="../images/channelLetter8.jpg" alt="../images/channelLetter8.jpg" width="150px">
+		<img src="../images/channelLetter8.jpg" alt="../images/channelLetter8.jpg" width="150">
 		<p>Oriental House</p>
 		</section>
 		
 		<section class="photoline">
-		<img src="../images/vehicle4.jpg" alt="../images/vehicle4.jpg" width="150px">
+		<img src="../images/vehicle4.jpg" alt="../images/vehicle4.jpg" width="150">
 		<p>Mustang</p>
 		</section>
 		
 		<section class="photoline">
-		<img src="../images/dimensional9.jpg" alt="../images/dimensional9.jpg" width="150px">
+		<img src="../images/dimensional9.jpg" alt="../images/dimensional9.jpg" width="150">
 		<p>Millers Pond</p>
 		</section>
 		
 		<section class="photoline">
-		<img src="../images/vehicle8.jpg" alt="../images/vehicle8.jpg" width="150px">
+		<img src="../images/vehicle8.jpg" alt="../images/vehicle8.jpg" width="150">
 		<p>Total Comfort</p>
 		</section>
  		
  		<section class="photoline">
- 		<img src="../images/delivery3.jpg" alt="../images/delivery3.jpg" width="150px">
+ 		<img src="../images/delivery3.jpg" alt="../images/delivery3.jpg" width="150">
 		<p>Peking</p>
 		</section>
 		</section>
