--- a/signs-by-design/Pages/services.html
+++ b/signs-by-design/Pages/services.html
@@ -21,8 +21,8 @@
   		<!-- navigation -->
   		<nav>
     		<a href="../index.html"><img src="../images/Home.png" alt="../images/Home.png"></a>
-    		<a href="about.html"><img src="../images/AboutRoll.png" alt="../images/About.png"></a>
-    		<a href="services.html"><img src="../images/Services.png" alt="../images/ServicesRoll.png"></a>
+    		<a href="about.html"><img src="../images/About.png" alt="../images/About.png"></a>
+    		<a href="services.html"><img src="../images/ServicesRoll.png" alt="../images/ServicesRoll.png"></a>
     		<a href="contact.html"><img src="../images/Contact.png" alt="../images/Contact.png"></a>
     	</nav>
 		<!-- navigation -->
