--- a/signs-by-design/index.html
+++ b/signs-by-design/index.html
@@ -9,13 +9,13 @@
 </head>
 	<body>
 		<!-- phone number -->
-        <div id="number">
+        <div class="number">
         <img src="images/SBD_Number.png" alt="images/SBD_Number.png" width="146">
         </div>
         <!-- phone number -->
 	
 		<!-- branding -->
- 		<div id="branding">
+ 		<div class="branding">
         <img src="images/SignsByDesignOrangeLogo.png" alt="images/SignsByDesignOrangeLogo.png" width="250">
         </div>
         <!-- branding -->
@@ -28,10 +28,10 @@
     		<a href="Pages/contact.html"><img src="images/Contact.png" alt="images/Contact.png"></a>
     	</nav>
 		<!-- navigation -->
-		
-		<div>
+		<br />
+		<section>
 		<img id="featuredphoto" src="images/vehicle2.png" alt="images/vehicle2.png">
-		</div>
+		</section>
  
  		<article id="hometext">
  		<h1>Welcome to Signs By Design!</h1>
