--- a/signs-by-design/Pages/contact.html
+++ b/signs-by-design/Pages/contact.html
@@ -21,9 +21,9 @@
   		<!-- navigation -->
   		<nav>
     		<a href="../index.html"><img src="../images/Home.png" alt="../images/Home.png"></a>
-    		<a href="about.html"><img src="../images/AboutRoll.png" alt="../images/About.png"></a>
+    		<a href="about.html"><img src="../images/About.png" alt="../images/About.png"></a>
     		<a href="services.html"><img src="../images/Services.png" alt="../images/Services.png"></a>
-    		<a href="contact.html"><img src="../images/Contact.png" alt="../images/ContactRoll.png"></a>
+    		<a href="contact.html"><img src="../images/ContactRoll.png" alt="../images/ContactRoll.png"></a>
     	</nav>
 		<!-- navigation -->
 		
