branding and number class

--- a/signs-by-design/Pages/about.html
+++ b/signs-by-design/Pages/about.html
@@ -7,13 +7,13 @@
 </head>
 	<body>
  		<!-- phone number -->
-        <div id="number">
+        <div class="number">
         <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146">
         </div>
         <!-- phone number -->
 	
 		<!-- branding -->
- 		<div id="branding">
+ 		<div class="branding">
         <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250">
         </div>
         <!-- branding -->
@@ -34,7 +34,7 @@
 		<img id="element" src="../images/ElementWindow.jpg" alt="../images/ElementWindow.jpg">
 		</div>
  
-		<article>
+		<article id="abouttext">
 		<p>Thank you for visiting our site. We design, manufacture, install, repair, 
 		maintain and refurbish all types of signage. We welcome both local customers and 
 		national accounts. This website demonstrates a wide variety of custom signs. If 
