--- a/signs-by-design/Pages/contact.html
+++ b/signs-by-design/Pages/contact.html
@@ -7,13 +7,13 @@
 </head>
 	<body>
  		<!-- phone number -->
-        <div id="number">
+        <div class="number">
         <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146">
         </div>
         <!-- phone number -->
 	
 		<!-- branding -->
- 		<div id="branding">
+ 		<div class="branding">
         <img src="../images/SignsByDesignOrangeLogo.png" alt="../images/SignsByDesignOrangeLogo.png" width="250">
         </div>
         <!-- branding -->
