--- a/signs-by-design/Pages/about.html
+++ b/signs-by-design/Pages/about.html
@@ -28,7 +28,7 @@
 		<!-- navigation -->
 		
 		<h1 class="pagetitle">About</h1>
-		<hr>
+		<hr class="divide">
 		
 		<div>
 		<img id="element" src="../images/ElementWindow.jpg" alt="../images/ElementWindow.jpg">
