--- a/signs-by-design/Pages/maintenance.html
+++ b/signs-by-design/Pages/maintenance.html
@@ -28,18 +28,18 @@
 		<!-- navigation -->
 		
 		<h1 class="pagetitle">Maintenance</h1>
-		<hr>
+		<hr class="divide">
 			<section class="breadcrumb">
 				<a>You Are Here:</a>
 				<a href="services.html">Services</a>
 				<a> >> </a>
 				<a href="maintenance.html">Maintenance</a>
 			</section>
-		<hr>
+		<hr class="divide">
 		
-		<section class="maintenancebg">
+		<section>
 		<h4>Installation Services</h4>
-		<div>
+		<div class="installlist">
 			<a>Install</a>
 			<a class="servicedivider">|</a>
 			<a>Service/Repair</a>
@@ -51,7 +51,7 @@
 			<a>Lighting</a>
 		</div>
 		
-		<div>
+		<div class="installphotos">
 			<a class="signphotos"><img src="../images/raceway.jpg" alt="../images/raceway.jpg" width="150"></a>
 			<a class="signphotos"><img src="../images/channelLetter.jpg" alt="../images/channelLetter.jpg" width="150"></a>
 			<a class="signphotos"><img src="../images/flex.jpg" alt="../images/flex.jpg" width="150"></a>
