--- a/signs-by-design/Pages/services.html
+++ b/signs-by-design/Pages/services.html
@@ -29,7 +29,7 @@
 		
 		<h1 class="pagetitle">Services</h1>
 		
-		<section>
+		<section id="servicelist">
 			<a href="signs.html">Illuminated Signs</a>
 			<a class="servicedivider">|</a>
 			<a href="signs.html">Non Illuminated Signs</a>
@@ -38,7 +38,7 @@
 			<a class="servicedivider">|</a>
 			<a href="maintenance.html">Installation Services</a>
 		</section>
-		<hr>
+		<hr class="divide">
 		
 		<section id="servicephotos">
 		<section class="photoline">
