--- a/signs-by-design/Pages/signs.html
+++ b/signs-by-design/Pages/signs.html
@@ -28,18 +28,18 @@
 		<!-- navigation -->
 		
 		<h1 class="pagetitle">Signs</h1>
-		<hr>
+		<hr class="divide">
 			<section class="breadcrumb">
 				<a>You Are Here:</a>
 				<a href="services.html">Services</a>
 				<a> >> </a>
 				<a href="signs.html">Signs</a>
 			</section>
-		<hr>
+		<hr class="divide">
 		
-		<section class="signsbg">
+		<section class="SignsContent">
 		<h4>Illuminated Signs</h4>
-		<div>
+		<div class="signslist">
 			<a>Cabinet</a>
 			<a class="servicedivider">|</a>
 			<a>Neon/LED</a>
@@ -51,7 +51,7 @@
 			<a>Delivery Signs</a>
 		</div>
 		
-		<div>
+		<div class="signsphotos">
 			<a class="signphotos"><img src="../images/delivery3.jpg" alt="../images/delivery3.jpg" width="150"></a>
 			<a class="signphotos"><img src="../images/channelLetterNeoncopy.jpg" alt="../images/channelLetterNeoncopy.jpg" width="150"></a>
 			<a class="signphotos"><img src="../images/channelLetter6.jpg" alt="../images/channelLetter6.jpg" width="150"></a>
@@ -59,7 +59,7 @@
 		</div>
 		
 		<h4>Non Illuminated Signs</h4>
-		<div>
+		<div class="signslist">
 			<a>Banners</a>
 			<a class="servicedivider">|</a>
 			<a>Building Signs</a>
@@ -81,7 +81,7 @@
 			<a>Yard Signs</a>
 		</div>
 		
-		<div>
+		<div class="signsphotos">
 			<a class="signphotos"><img src="../images/dimensional9.jpg" alt="../images/dimensional9.jpg" width="150"></a>
 			<a class="signphotos"><img src="../images/sandblast9.jpg" alt="../images/sandblast9.jpg" width="150"></a>
 			<a class="signphotos"><img src="../images/MonumentSandblast.jpg" alt="../images/MonumentSandblast.jpg" width="150"></a>
@@ -89,13 +89,13 @@
 		</div>
 		
 		<h4>Vehicle Graphics</h4>
-		<div>
+		<div class="signslist">
 			<a>Vinyl and Digital</a>
 			<a class="servicedivider">|</a>
 			<a>Vehicle Wraps</a>
 		</div>
 		
-		<div>
+		<div class="signsphotos">
 			<a class="signphotos"><img src="../images/vehicle3.jpg" alt="../images/vehicle3.jpg" width="150"></a>
 			<a class="signphotos"><img src="../images/vehicle4.jpg" alt="../images/vehicle4.jpg" width="150"></a>
 			<a class="signphotos"><img src="../images/vehicle8.jpg" alt="../images/vehicle8.jpg" width="150"></a>
