--- a/signs-by-design/Pages/contact.html
+++ b/signs-by-design/Pages/contact.html
@@ -28,7 +28,7 @@
 		<!-- navigation -->
 		
 		<h1 class="pagetitle">Contact</h1>
-		<hr>
+		<hr class="divide">
 		
 		<section id="contactform">
 		<form method="get" action="mailto:info4sign@gmail.com"></form>
