Linked View Services

--- a/signs-by-design/index.html
+++ b/signs-by-design/index.html
@@ -40,7 +40,7 @@
 		This website demonstrates a wide variety of custom signs. If you need assistance with 
 		what types of materials or sign will work best for you, please feel free to email or 
 		call, and we'll work with you to create a custom sign for your business...</p>
-		<a id="servicesbutton" href="services.html"><img src="images/ViewServices.png" alt="images/ViewServices.png" width="130"></a>
+		<a id="servicesbutton" href="/Pages/services.html"><img src="images/ViewServices.png" alt="images/ViewServices.png" width="130"></a>
 		</article>
 		<section id="aboutdivider">
 		<img src="images/DividerLines.png" alt="images/DividerLines.png">
