--- a/signs-by-design/Pages/contact.html
+++ b/signs-by-design/Pages/contact.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="../css/main.css">
 </head>
 	<body>
+		<div class="clearFix"></div>
  		<!-- phone number -->
         <div class="number">
         <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146">
@@ -76,7 +77,7 @@
 				<button type="submit" name="submit" class="button">Send</button>
 			</div>
 			
-			<aside>
+			<aside id="contactinfo">
 				<h4>Contact:</h4>
 				<p>
 					Ph: 864-322-7073
