--- a/signs-by-design/Pages/maintenance.html
+++ b/signs-by-design/Pages/maintenance.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="../css/main.css">
 </head>
 	<body>
+		<div class="clearFix"></div>
  		<!-- phone number -->
         <div class="number">
         <img src="../images/SBD_Number.png" alt="../images/SBD_Number.png" width="146">
