--- a/signs-by-design/index.html
+++ b/signs-by-design/index.html
@@ -8,6 +8,7 @@
 <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 </head>
 	<body>
+		<div class="clearFix"></div>
 		<!-- phone number -->
         <div class="number">
         <img src="images/SBD_Number.png" alt="images/SBD_Number.png" width="146">
